# Minecraft-MCPE

./: .gitignore  README.md
.github/workflows/: msbuild.yml
handheld/project/android/: AndroidManifest.xml  build.gradle  buildcommands.txt
handheld/project/android/jni/: Android.mk  Application.mk
handheld/project/android/src/com/mojang/minecraftpe/: MainActivity.java
handheld/project/dedicated_server/: CMakeLists.txt  DedicatedServerWin32.vcxproj  DedicatedServerWin32.vcxproj.filters
handheld/project/lib_projects/raknet/jni/: CMakeLists.txt
handheld/project/lib_projects/raknet/jni/RaknetSources/: PacketLogger.cpp  RakNetStatistics.cpp
handheld/project/win32/: CopyDLLDebug.bat  CopyDLLRelease.bat  MinecraftWin32.sln  MinecraftWin32.vcxproj  MinecraftWin32.vcxproj.filters  MinecraftWin32ModernToolchain.vcxproj
handheld/src/: App.h  NinecraftApp.cpp  main_android.cpp  main_android.h  main_dedicated.cpp  main_win32.h
handheld/src/client/: Minecraft.cpp  Minecraft.h
handheld/src/client/renderer/: Chunk.cpp  LevelRenderer.cpp  Tesselator.cpp  gl.cpp  gl.h
handheld/src/network/: ClientSideNetworkHandler.cpp  ClientSideNetworkHandler.h
handheld/src/raknet/: FileList.cpp  RakString.cpp
handheld/src/world/level/storage/: ExternalFileLevelStorage.cpp  ExternalFileLevelStorageSource.cpp  FolderMethods.cpp
handheld/src/world/level/tile/: SandTile.cpp
