FILE(GLOB raknetCPPSources ./RaknetSources/*.cpp)
if (UNIX)
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -m32 -Wno-narrowing")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m32 -Wno-narrowing")
endif (UNIX)
if (WIN32)
set(CMAKE_C_FLAGS -m32)
set(CMAKE_CXX_FLAGS -m32)
endif (WIN32)
add_library(raknet ${raknetCPPSources})
